--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,6 @@ add_subdirectory(
   EXCLUDE_FROM_ALL
 )
 
-add_executable(function_testing function.h tests.cpp)
+add_executable(function_testing function.h storage.h type_descriptor.h tests.cpp)
 target_link_libraries(function_testing gtest_main)
 
